test/files/invalid/bad_end_of_string.stderr
[0m[1m[38;5;9merror[0m[1m: Unexpected end of string[0m
  [0m[34m┌─[0m test/files/invalid/bad_end_of_string.fbs:3:2
  [0m[34m│[0m
[0m[34m3[0m [0m[34m│[0m }
  [0m[34m│[0m  [0m[31m^[0m

Error: Bailing because of errors
